# clawd-tank

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  TODO.md  setup_env.sh
assets/: app-icon-mockups.html
docs/: DESIGN.md  HISTORY.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  protocol-changelog.md
firmware/: partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
firmware/main/: CMakeLists.txt  Kconfig.projbuild  battery.c  battery.h  ble_service.c  ble_service.h  board_config.h  button.c  config_store.c  config_store.h  display.c  display.h  es8311.c  es8311.h  i2c_bus.c  i2c_bus.h  idf_component.yml  main.c  notification.c  notification.h  notification_ui.c  notification_ui.h  pixel_font.c  rgb_led.c  rgb_led.h  scene.c  scene.h  sound.c  sound.h  touch.c  touch.h  ui_manager.c  ui_manager.h
firmware/main/assets/: hammering.pcm  keyboard_type.pcm  notification_click.pcm  searching.pcm  sprite_beacon.h  sprite_ble_icon.h  sprite_building.h  sprite_conducting.h  sprite_debugger.h  sprite_disconnected.h  sprite_going_away.h  sprite_idle.h  sprite_mini_crab.h  sprite_sleeping.h  sprite_wizard.h  thinking_robot.pcm
host/: build.sh  clawd-notify  requirements-dev.txt  setup.py
simulator/: CMakeLists.txt  README.md  sim_ble_parse.c  sim_display.c  sim_display.h  sim_display_shim.c  sim_events.c  sim_events.h  sim_main.c  sim_socket.c
tools/: ble_test.py  direnv_src.sh  png2rgb565.py  record_gif.py  scene-layout-editor.html  slack_emoji_upload.py  svg2slack_emoji.py
(+95 files in other folders)
